--- a/front/src/App.css
+++ b/front/src/App.css
@@ -2,7 +2,27 @@
     text-align: center;
 }
 
+.loading-bar {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background: linear-gradient(to right, #FF69B4, #FF1493);
+    animation: loadingAnimation 8s infinite ease-in-out;
+}
+
+@keyframes loadingAnimation {
+    0% {
+        background-position: 0% 0;
+    }
+    100% {
+        background-position: 100% 0;
+    }
+}
+
 .header {
+    position: relative;
     background-color: #282c34;
     padding: 20px;
     color: white;
@@ -23,21 +43,23 @@
     padding: 10px 20px;
     font-size: 16px;
     border-radius: 4px;
-    border: 1px solid #ccc;
-    outline: none;
+    border: none;
     width: 150px;
 }
 
 .dropdown {
-    padding: 10px;
+    padding: 10px 20px;
     font-size: 16px;
+    border-radius: 4px;
+    border: none;
+    width: 250px;
 }
 
 .upload-button {
     background-color: #FF1493;
     padding: 10px 20px;
     border: none;
-    color: black;
+    color: white;
     cursor: pointer;
     font-size: 16px;
     border-radius: 4px;
@@ -49,13 +71,12 @@
 
 .build-button {
     background-color: #FF1493;
-    padding: 10px 20px;
     border: none;
+    padding: 10px 20px;
     color: white;
     cursor: pointer;
     font-size: 16px;
     border-radius: 4px;
-    margin-left: 10px;
 }
 
 .build-button:hover {
@@ -87,7 +108,6 @@ h2 {
     padding: 20px;
     max-height: 740px;
     overflow-y: auto;
-    background-color: #FF69B4;
     line-height: 1.6;
 }
 
