--- a/front/src/App.css
+++ b/front/src/App.css
@@ -104,16 +104,28 @@ h2 {
 
 .txt-win {
     text-align: left;
-    white-space: normal;
+    white-space:pre-wrap;
     padding: 20px;
     max-height: 740px;
     overflow-y: auto;
-    line-height: 1.6;
+    overflow-x: auto;
+    line-height: 1.8;
+    font-size: large;
+    cursor: pointer;
+}
+
+.line-number {
+    color: #888;
+    margin-right: 10px;
+    user-select: none;
+    cursor: default;
 }
 
 .svg-win {
     max-height: 740px;
     overflow: auto;
     padding: 20px;
+    user-select: none;
+    flex-shrink: 0;
 }
 
