--- a/front/src/App.css
+++ b/front/src/App.css
@@ -8,7 +8,7 @@
     left: 0;
     width: 100%;
     height: 4px;
-    background: linear-gradient(to right, #FF69B4, #FF1493);
+    background: linear-gradient(to right, #FF69B4, #228B22);
     animation: loadingAnimation 8s infinite ease-in-out;
 }
 
@@ -56,7 +56,7 @@
 }
 
 .upload-button {
-    background-color: #FF1493;
+    background-color: #228B22;
     padding: 10px 20px;
     border: none;
     color: white;
@@ -70,7 +70,7 @@
 }
 
 .build-button {
-    background-color: #FF1493;
+    background-color: #228B22;
     border: none;
     padding: 10px 20px;
     color: white;
@@ -91,11 +91,11 @@
 }
 
 .window {
-    border: 2px solid #FF1493;
+    border: 2px solid #228B22;
     padding: 10px;
     border-radius: 5px;
     background-color: snow;
-    max-width: 920px;
+    max-width: 899px;
 }
 
 h2 {
@@ -104,13 +104,13 @@ h2 {
 
 .txt-win {
     text-align: left;
-    white-space:pre-wrap;
-    padding: 20px;
-    max-height: 740px;
+    white-space: pre;
+    padding: 10px;
+    max-height: 730px;
     overflow-y: auto;
     overflow-x: auto;
     line-height: 1.8;
-    font-size: large;
+    font-size: x-large;
     cursor: pointer;
 }
 
@@ -122,7 +122,7 @@ h2 {
 }
 
 .svg-win {
-    max-height: 740px;
+    max-height: 730px;
     overflow: auto;
     padding: 20px;
     user-select: none;
